proper note path

--- a/vol1.html
+++ b/vol1.html
@@ -11,7 +11,7 @@
     <a href="index.html"><button type="button" class="back">Back</button></a>
     <!-- Tape & Paper -->
     <div class="note-wrapper">
-      <img src="note.png" alt="Note" class="note" />
+      <img src="assets/images/note.png" alt="Note" class="note" />
       <h1 class="vol-1">
         Vol. 1<br><span>June 2 - 7</span>
       </h1>
