--- a/vol1.html
+++ b/vol1.html
@@ -9,20 +9,28 @@
 <body>
   <div class="container">
     <a href="index.html"><button type="button" class="back">Back</button></a>
+
+    <!--<div class="buttons">
+      <a href=""><button type="button" class="faq">FAQ</button></a>
+      <a href=""><button type="button" class="join">Join</button></a>
+      <a href=""><button type="button" class="resources">Resources</button></a>
+
+
+
+    </div> -->
     <!-- Tape & Paper -->
     <div class="note-wrapper">
       <img src="assets/images/note.png" alt="Note" class="note" />
       <h1 class="vol-1">
-        Vol. 1<br><span>June 2 - 7</span>
+        Vol.1
       </h1>
-      
+
     </div>
 
   
     <div class="image-grid">
       <img src="assets/images/swamp.jpeg" alt="Swampt" class="img-item swamp">
       <img src="assets/images/postcard.jpeg" alt="Postcard" class="img-item postcard" />
-      <img src="assets/images/banana.png" alt="Banana" class="img-item banana" />
       <img src="assets/images/girl-and-dog.jpeg" alt="Girl and Dog" class="img-item dog" />
 
       <img src="assets/images/crumpled-paper.png" alt="Crumpled Paper" class="img-item paper" />
@@ -31,14 +39,14 @@
       <img src="assets/images/chocolate.png" alt="Chocolate" class="img-item chocolate" />
       <img src="assets/images/paper-ball.png" alt="Paper Ball" class="img-item ball" />
       <img src="assets/images/dog-treats.png" alt="Dog Treats" class="img-item treats" />
+            <img src="assets/images/banana.png" alt="Banana" class="img-item banana" />
 
     </div>
 
-
-    <img src="assets/images/scuff.png" class="scuff-1" alt="Scuff" />
-    <img src="assets/images/scuff.png" class="scuff-2" alt="Scuff" />
-    <img src="assets/images/scuff.png" class="scuff-3" alt="Scuff" />
-
+    <div class="scuffs">
+      <img src="assets/images/scuff.png" class="scuff-1" alt="Scuff" />
+    </div>
+    
   </div>
 </body>
 </html>
