--- a/vol1.html
+++ b/vol1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <a href="index.html"><button type="button" class="back">Back</button></a>
+    
 
     <!--<div class="buttons">
       <a href=""><button type="button" class="faq">FAQ</button></a>
@@ -21,9 +21,7 @@
     <!-- Tape & Paper -->
     <div class="note-wrapper">
       <img src="assets/images/note.png" alt="Note" class="note" />
-      <h1 class="vol-1">
-        Vol.1
-      </h1>
+      <a class="vol-1" href="">Vol.1</a>
 
     </div>
 
@@ -39,13 +37,14 @@
       <img src="assets/images/chocolate.png" alt="Chocolate" class="img-item chocolate" />
       <img src="assets/images/paper-ball.png" alt="Paper Ball" class="img-item ball" />
       <img src="assets/images/dog-treats.png" alt="Dog Treats" class="img-item treats" />
-            <img src="assets/images/banana.png" alt="Banana" class="img-item banana" />
+      <img src="assets/images/banana.png" alt="Banana" class="img-item banana" />
 
     </div>
 
     <div class="scuffs">
       <img src="assets/images/scuff.png" class="scuff-1" alt="Scuff" />
     </div>
+    <a href="index.html"><button type="button" class="back">Back</button></a>
     
   </div>
 </body>
