--- a/resources.html
+++ b/resources.html
@@ -3,31 +3,64 @@
 <head>
     <meta charset="UTF-8" />
     <title>Resources</title>
+    <link rel="stylesheet" href="resources.css"/>
+
 </head>
 
 <body>
     <h1>Resources</h1>
+    <a href="vol1.html"><img src="assets/images/pencil1.png" alt="back"></a>
 
-    <ul class="resource-list">
-        <list>
-            <h1></h1>
-            <p></p>
-        </list>
+  <ul class="resource-list">
+    <li>
+      <strong><a href="https://www.literacyshed.com/" target="_blank">The Literacy Shed</a></strong><br>
+      Offers video prompts, animations, and visuals to spark creative storytelling. It’s perfect for kids who get inspired by images or movies before writing.
+    </li>
+    <li>
+      <strong><a href="https://ywp.nanowrimo.org/" target="_blank">NaNoWriMo Young Writers Program (YWP)</a></strong><br>
+      A fun, kid-friendly version of National Novel Writing Month where young writers set their own word-count goals and write a novel in November. Offers an interactive site with challenges, badges, and writing tips.
+    </li>
+    <li>
+      <strong><a href="https://storybird.com/" target="_blank">Storybird</a></strong><br>
+      A visual storytelling platform that lets kids write their own stories or poems inspired by beautiful artwork. Great for sparking creativity and developing narrative skills in a safe, guided environment.
+    </li>
+    <li>
+      <strong><a href="https://kpcnotebook.scholastic.com/" target="_blank">Scholastic Kids Press</a></strong><br>
+      A news-writing program where students aged 10–14 can apply to be kid reporters and write about current events. It’s an exciting way to practice journalism and see your writing published.
+    </li>
+    <li>
+      <strong><a href="https://www.youtube.com/playlist?list=PLSH_xM-KC3Z6041KdEyYVyp5x1pR4k0d5" target="_blank">Brandon Sanderson’s Writing Lectures (YouTube)</a></strong><br>
+      Though designed for older teens and adults, these free lectures by fantasy author Brandon Sanderson offer clear and entertaining explanations of story structure, world-building, and character development. Great for ambitious young writers curious about professional storytelling.
+    </li>
+    <li>
+      <strong><a href="https://826digital.com/" target="_blank">826 Digital</a></strong><br>
+      Created by the nonprofit 826 National, this site offers free writing prompts, projects, and lesson plans for young writers. Includes zany, imaginative activities that build skills in poetry, fiction, and nonfiction.
+    </li>
+    <li>
+      <strong><a href="https://www.storyseedspodcast.com/" target="_blank">The Story Seeds Podcast</a></strong><br>
+      In this podcast, real kids team up with professional authors to grow their story ideas into stories. A wonderful mix of imagination and practical writing inspiration.
+    </li>
+    <li>
+      <strong><a href="https://kidlit.tv/" target="_blank">KidLit TV</a></strong><br>
+      A treasure trove of videos about children’s books, author interviews, and drawing tutorials. It’s perfect for young writers who want to explore how books are made and where ideas come from.
+    </li>
+    <li>
+      <strong><a href="https://nanowrimo.org/what-is-camp-nanowrimo" target="_blank">Camp NaNoWriMo (April & July)</a></strong><br>
+      A more relaxed version of NaNoWriMo that runs in the spring and summer, allowing young writers to set their own goals and try new projects. Great for experimenting with short stories, poems, or journaling.
+    </li>
+    <li>
+      <strong><a href="https://www.tellingroom.org/" target="_blank">The Telling Room</a></strong><br>
+      A youth writing center with online writing prompts, workshops, and publications that showcase student work. It encourages kids to find their voice and share their stories with the world.
+    </li>
+    <li>
+      <strong><a href="https://writershq.co.uk/free-resources-for-kids/" target="_blank">Writer’s HQ Free Resources for Kids</a></strong><br>
+      Offers a collection of downloadable resources, guides, and challenges made to motivate young writers. The tone is silly and encouraging—ideal for reluctant writers or those needing a boost.
+    </li>
+  </ul>
 
-        <list>
-            <h1></h1>
-            <p></p>
-        </list>
+  <a href="index.html"><img src="assets/images/pencil2.png" alt="back"></a>
 
-        <list>
-            <h1></h1>
-            <p></p>
-        </list>
 
-        <list>
-            <h1></h1>
-            <p></p>
-        </list>
 
 
     
