--- a/vol1.html
+++ b/vol1.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <div class="container">
+    <a href="index.html"><button type="button" class="back">Back</button></a>
     
 
     <!--<div class="buttons">
@@ -44,7 +45,8 @@
     <div class="scuffs">
       <img src="assets/images/scuff.png" class="scuff-1" alt="Scuff" />
     </div>
-    <a href="index.html"><button type="button" class="back">Back</button></a>
+
+    <a class="res-link" href="resources.html">Resources</a>
     
   </div>
 </body>
