chocolate animation condition

--- a/vol1.html
+++ b/vol1.html
@@ -28,8 +28,12 @@
 
   
     <div class="image-grid">
-      <img src="assets/images/swamp.jpeg" alt="Swampt" class="img-item swamp">
-      <img src="assets/images/postcard.jpeg" alt="Postcard" class="img-item postcard" />
+      <a href="contents/swamp.html">
+      <img src="assets/images/swamp.jpeg" alt="Swampt" class="img-item swamp"></a>
+
+      <a href="contents/postcard.html">
+      <img src="assets/images/postcard.jpeg" alt="Postcard" class="img-item postcard" /></a>
+      
       <img src="assets/images/girl-and-dog.jpeg" alt="Girl and Dog" class="img-item dog" />
 
       <img src="assets/images/crumpled-paper.png" alt="Crumpled Paper" class="img-item paper" />
