--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
       <div class="textbox">
         
           <p>
-          We often treat young people as incapable of deep, introspective thought. 
+          We often treat young people as incapable of creative, introspective thought. 
           It is important for children to access spaces where they can cultivate their 
           artistic passion alongside peers and independent of censorship. The Scribble Society 
           is a forum where young creatives can publish their work and view works made by peers 
-          who share the same passions. Submissions are posted in a monthly online zine.
+          who share the same passions. Submissions are posted in a monthly online zine, with a 
+          custom collage linking to each student's creation. 
 
           </p>
           
